--- a/Front_htmlcss/Firm/style.css
+++ b/Front_htmlcss/Firm/style.css
@@ -34,7 +34,8 @@ li {
 }
 
 
-.nalogi, .uslugi, .perevod {
+.nalogi, 
+.perevod {
     background-color: #4d3bff;
     border: none;
     color: white;
@@ -49,10 +50,12 @@ li {
     border-radius: 10px;
     font-family: 'Oswald', sans-serif;
 }
-.nalogi:hover, .uslugi:hover, .perevod:hover {
+.nalogi:hover, 
+.perevod:hover {
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.238), 0 17px 50px 0 rgba(0, 0, 0, 0.3);
 }
-.nalogi:active, .uslugi:active, .perevod:active {
+.nalogi:active,
+.perevod:active {
     transition: none;
     background-color: #4f3bffd1;
 }
