--- a/Front_htmlcss/style.css
+++ b/Front_htmlcss/style.css
@@ -1,3 +1,9 @@
+input::-webkit-outer-spin-button, /*Выпиливание стрелочек у <input type="number">*/
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0; 
+}
+
 body {
     font-size: 1.5rem;
     font-family: 'Oswald', sans-serif;
@@ -7,7 +13,7 @@ li {
     font-size: 2rem;
 }
 
-.entrance {
+input { /*Поля*/
     margin-left: auto;
     margin-right: auto;
     display: block;
@@ -21,11 +27,11 @@ li {
     background-color: #fff;
     background-clip: padding-box;
     border: 1px solid #bdbdbd;
-    border-radius: 1rem;
+    border-radius: 10px;
     transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
-.submit {
+.submit { /*Кнопка авторизации*/
     background-color: #3bff86;
     border: none;
     color: white;
@@ -40,11 +46,9 @@ li {
     margin: 20px;
     font-family: 'Oswald', sans-serif;
 }
-
 .submit:hover {
     box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.238), 0 17px 50px 0 rgba(0, 0, 0, 0.3);
 }
-
 .submit:active {
     transition: none;
     background-color: #30d670cf;
@@ -53,6 +57,8 @@ li {
 .main {
     text-align: center;
 }
+
+/*----------Кнопки на странице (кроме кнопок в модалке)----------*/
 
 .exit {
     background-color: #3bff86;
@@ -110,4 +116,85 @@ li {
 .zarplata:active {
     transition: none;
     background-color: #4f3bffd1;
+}
+
+/*----------Модальное окошечко---------*/
+
+.modal,
+.pin_modal { /*Анимация появления модалки*/
+    animation: 1s show ease;
+}
+@keyframes show {
+    from { opacity: 0; }
+    to { opacity: 1; }
+}
+.modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background: rgba(0, 0, 0, .3);
+}
+.modal-window { /*Содержание модального окна*/
+    width: 80vw;
+    border-radius: 10px;
+    background: #fff;
+    margin: 20vh auto;
+    text-align: center;
+}
+
+.modal-header {
+    padding: 5px 10px;
+}
+.modal-title {
+    font-size: 2rem;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 3vh;
+}
+.modal-body input {
+    margin-bottom: 2vh;
+}
+.modal-submit, /*Кнопочки в модалке*/
+.modal-cancel {
+    background-color: #fe9654;
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 1.5rem;
+    margin: 4px 2px 15px;
+    cursor: pointer;
+    transition: 0.3s;
+    border-radius: 10px;
+    font-family: 'Oswald', sans-serif;
+}
+.modal-submit:hover,
+.modal-cancel:hover {
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.238), 0 17px 50px 0 rgba(0, 0, 0, 0.3);
+}
+.modal-submit:active,
+.modal-cancel:active {
+    transition: none;
+    background-color: #fe9554d1;
+}
+.modal-submit:disabled {
+    cursor: not-allowed;
+    background-color: #fe945280;
+    box-shadow: none;
+}
+
+.modal-nalogi { /*Статус налогов*/
+    background-color: #fe9654;
+    border: none;
+    color: white;
+    padding: 7px 14px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    margin: 4px 2px 15px;
+    border-radius: 10px;
 }
